--- a/css/estilo.css
+++ b/css/estilo.css
@@ -81,6 +81,45 @@ main p.valor {
     text-align: left;
 }
 
+/*Status de solicitaçoes*/
+
+.solicitaçao{
+    padding: 30px 70px; 
+    display: flex;
+    justify-content: space-evenly;
+}
+.solicitaçao h2{
+    color: #4CAF50;
+}
+
+
+.card-soli p{
+    width: 100%;
+    border: 1px solid #212121;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 5px 0;
+}
+.card-soli a{
+    font-size: 16px;
+    background-color: #4CAF50;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    border: 1px solid #4CAF50;
+    padding: 5px 15px;
+    border-radius: 30px;
+    transition: 0.5s;
+}
+.card-soli a:hover{
+    background-color: #388E3c;
+    border-color: #388E3c;
+    cursor: pointer;
+}
+
+
+
+
 /* FOOTER */
 footer {
     background-color: #4CAF50;
