--- a/css/estilo.css
+++ b/css/estilo.css
@@ -137,4 +137,22 @@ footer .copyright {
     padding: 10px; 
     font-size: 12px;
 } 
+form .Titulo-form-plano {
+    display: flex;
+    justify-content: center;
+    color: #4CAF50;
+}
 
+.form-container {
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+}
+.form-select {
+    font-size: small;
+}
+.card-text{
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+}
