Mudança de cor para acessibilidade e footer

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,8 +13,8 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
-} 
+    background-color: #276328;
+}
 
 header ul {
     margin: 20;
@@ -26,27 +26,29 @@ header ul {
 
 header ul li {
     display: inline-table;
-    padding: 10px 15px; 
+    padding: 10px 15px;
 }
 
 header ul li a {
     text-decoration: none;
-    color: #fff;  
-} 
+    color: #FFF;
+}
 
 button.btn-success {
-    background-color: #4CAF50;
-    border-color: #4CAF50;
-}  
+    background-color: #276328;
+    border-color: #276328;
+}
 
-/* PLANOS */ 
+
+/* PLANOS */
 
 main h2 {
-    color: #4CAF50;
+    color: #276328;
+    font-weight: bold;
 }
 
 h5.card-title {
-    color: #4CAF50;
+    color: #276328;
 }
 
 p.card-text {
@@ -56,19 +58,20 @@ p.card-text {
 main p.valor {
     text-align: center;
     font-size: 30px;
-    color: #4CAF50;
+    color: #276328;
     line-height: 39.57px;
     font-weight: bold;
 }
 
 .card-body a {
-    background-color: #4CAF50;
-    color: #FFF;
+    background-color: #276328;
     font-size: 15px;
     padding: 6px 35px;
     text-decoration: none;
     border-radius: 50px;
     text-align: center;
+    color: #fff;
+    font-weight: 500;
 }
 
 /* STATUS SOLICITAÇÃO */
@@ -76,26 +79,29 @@ main p.valor {
     padding: 100px 0;
 }
 
-.solicitacao-1 h2{
-text-align: right;
-font-size: 42px;
-padding: 0 0 30px;
-color: #4CAF50;
-font-weight: bold; 
+.solicitacao-1 h2 {
+    text-align: right;
+    font-size: 42px;
+    padding: 0 0 30px;
+    color: #276328;
 }
 
 .visita {
-text-align: right;
-width: 100%;
-font-size: 23px;
+    text-align: right;
+    width: 100%;
+    font-size: 23px;
 }
 
-.button a{
-    text-align: right ;
+.button a {
+    text-align: right;
     border-radius: 50px;
-    background-color: #4CAF50;
+    background-color: #276328;
     padding: 6px 35px;
+    font-size: 15px;
+    color: #fff;
+    font-weight: 500;
 }
+
 /* PÁGINA DOS PLANOS */
 
 .info-planos {
@@ -103,20 +109,20 @@ font-size: 23px;
 }
 
 .info-planos h3 {
-    color: #4CAF50;
+    color: #276328; 
 }
 
 p.text-left {
-    color: #4CAF50;
+    color: #276328;
     font-size: 25px;
     text-align: left;
-    font-weight: bold; 
+    font-weight: bold;
 }
 
-form .Titulo-form-plano {
+form h1 {
     display: flex;
     justify-content: center;
-    color: #4CAF50;
+    color: #276328;
 }
 
 .form-container {
@@ -124,22 +130,26 @@ form .Titulo-form-plano {
     display: flex;
     justify-content: center;
 }
+
 .form-select {
     font-size: small;
 }
-.card-text{
+
+.card-text {
     font-weight: bold;
     display: flex;
     justify-content: center;
 }
+
 .btn-primary {
-    background-color: #388E3c;
- }
- .planos-main {
+    background-color: #276328;
+}
+
+.planos-main {
     display: flex;
     justify-content: space-between;
     margin: 15px;
- }
+}
 
 /*Status de solicitaçoes*/
 
@@ -150,7 +160,7 @@ form .Titulo-form-plano {
 }
 
 .solicitaçao h2 {
-    color: #4CAF50;
+    color: #276328;
 }
 
 
@@ -160,32 +170,25 @@ form .Titulo-form-plano {
     border-radius: 7px;
     padding: 10px;
     margin: 5px 0;
+    gap: 80px;
 }
 
 .card-soli a {
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #276328;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    border: 1px solid #4CAF50;
+    border: 1px solid #276328;
     padding: 5px 15px;
     border-radius: 30px;
     transition: 0.5s;
 }
 
-.card-soli a:hover {
-    background-color: #388E3c;
-    border-color: #388E3c;
-    cursor: pointer;
-}
-
-
-
-
 /* FOOTER */
+
 footer {
-    background-color: #4CAF50;
+    background-color: #276328;
     color: #fff;
     font-weight: 700;
     font-size: 18px;
@@ -201,8 +204,65 @@ footer .container {
     padding: 30px 0;
 }
 
+.dropbtn {
+    background-color: #276328;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    overflow: auto;
+}
+
+.dropup {
+    position: relative;
+    display: inline-block;
+}
+
+.dropup-content {
+    display: none;
+    position: absolute;
+    bottom: 50px;
+    background-color: #f1f1f1;
+    min-width: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+.dropup-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: center;
+}
+
+.dropup-content a:hover {
+    background-color: #fff
+}
+
+.dropup:hover .dropup-content {
+    display: block;
+}
+
+
+footer ul li a,
+footer ul li button {
+    text-decoration: none;
+    padding: 16px;
+    color: #FFF; 
+}
+
+footer ul li {
+    text-decoration: none;
+    display: table-row;  
+    font-size: 16px; 
+    gap: 10px;
+}
+
 footer p {
-    margin: 0;
+    margin: 20px; 
+    border-right: 1.5px solid #fff;
 }
 
 footer .col p {
@@ -210,19 +270,7 @@ footer .col p {
     text-align: left;
     text-decoration: none;
     font-weight: lighter;
-    padding: -50px -100px;
-}
-
-footer ul li a,
-footer ul li button.btn-success {
-    text-decoration: none;
-    padding: 10px 15px;
-    color: #FFF;
-}
-
-footer ul li {
-    text-decoration: none;
-    display: table-row;
+    padding: -50px -100px; 
 }
 
 footer .row {
@@ -232,9 +280,10 @@ footer .row {
 footer .copyright {
     text-align: center;
     border-top: 1.5px solid #fff;
-    padding: 10px; 
+    padding: 10px;
     font-size: 12px;
-} 
+}
+
 form .Titulo-form-plano {
     display: flex;
     justify-content: center;
@@ -246,10 +295,12 @@ form .Titulo-form-plano {
     display: flex;
     justify-content: center;
 }
+
 .form-select {
     font-size: small;
 }
-.card-text{
+
+.card-text {
     font-weight: bold;
     display: flex;
     justify-content: center;
